2013-02-09  Chong Yidong  <cyd@gnu.org>

	* dired-x.el (dired-do-run-mail): Prompt for confirmation
	(Bug#13561).

2013-02-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/byte-run.el (eval-when-compile, eval-and-compile):
	Eval body right away, now that we do eager macroexpansion (bug#13605).

	* simple.el (end-of-buffer): Don't touch unrelated windows (bug#13466).
	(fundamental-mode): Use run-mode-hooks.

	* eshell/esh-proc.el (eshell/kill): Fix last change.
	* eshell/em-ls.el (eshell-ls-dir): Fix use of CL in last change.

2013-02-08  Aidan Gauland  <aidalgol@no8wireless.co.nz>

	* eshell/esh-proc.el (eshell/kill): Rewrite.

	* eshell/em-ls.el (show-almost-all): Declare.
	(eshell-do-ls): Add support for -A argument.

2013-02-08  Jambunathan K  <kjambunathan@gmail.com>

	* icomplete.el (icomplete-forward-completions)
	(icomplete-backward-completions): Handle corner case (bug#13602).

2013-02-07  Michael Albinus  <michael.albinus@gmx.de>

	* vc/vc-hooks.el (vc-find-file-hook): `buffer-file-truename' can
	be nil.  Handle this.  (Bug#13636)

2013-02-07  Richard Stallman  <rms@gnu.org>

	* mail/rmail.el (rmail-variables): Specify `no-conversion' for
	`save-buffer-coding-system'.

2013-02-07  Alan Mackenzie  <acm@muc.de>

	Fix bug in state cache mechanism.  Remove 'BOD "strategy".  Refactor.
	* progmodes/cc-engine.el (c-get-fallback-scan-pos): Remove.
	(c-parse-state-get-strategy): Don't return 'BOD any more.
	(c-append-lower-brace-pair-to-state-cache):
	Extra parameter HERE instead of narrowing.
	Widen to top of buffer before searching backwards for a brace pair.
	(c-state-push-any-brace-pair): Add HERE parameter to function call.
	(c-append-to-state-cache): Extra parameter HERE in place of narrowing.
	Narrow to parameter HERE, in place of being called narrowed.
	(c-remove-stale-state-cache): Extra parameter HERE in place of
	narrowing.  Check there's an open brace in the cache before
	searching for its match.